# envman

./: Dockerfile  create_interface.sh
api_v1/: Dockerfile.envman  README.md
api_v1/client/: Dockerfile
api_v1/client/e2sim_client/: e2sim_client.py
api_v1/client/python/: README.md  pyproject.toml  setup.py
api_v1/nodeb_client/: build_and_run_client.sh
api_v1/nodeb_client/python/: README.md
api_v1/nodeb_server/: .dockerignore  .gitignore  Dockerfile
api_v1/nodeb_server/.openapi-generator/: FILES
api_v1/nodeb_server/api/: DebuggingApi.h  ManagementApi.cpp  ManagementApi.h  MonitoringApi.h  TestingApi.cpp
api_v1/nodeb_server/model/: Data_plane_flow.cpp  Data_plane_flow.h  Nodeb_descriptor.cpp  Nodeb_descriptor.h  Ue_descriptor.h  _UE__iMSI__admission_put_request.cpp  _UE__iMSI__admission_put_request.h  _UE__iMSI__info_get_200_response.cpp  _UE__iMSI__info_get_200_response.h  _UE_get_200_response.cpp  _UE_get_200_response.h  _endpoints_get_200_response.h
api_v1/nodeb_server/src/: api_impl.cpp  api_impl.h  environment_manager.cpp  environment_manager.h
api_v1/nodeb_server/standalone/: standalone_server.cpp
api_v1/server/: CMakeLists.txt  Dockerfile  README.md
api_v1/server/.openapi-generator/: FILES
api_v1/server/api/: ApiBase.h  DebuggingApi.cpp  ManagementApi.cpp  ManagementApi.h  MonitoringApi.cpp  MonitoringApi.h  TestingApi.cpp  TestingApi.h
api_v1/server/model/: Anr_payload.cpp  Anr_payload.h  Data_plane_flow.cpp  Data_plane_flow.h  Helpers.cpp  Helpers.h  Nodeb_descriptor.cpp  Nodeb_descriptor.h  Ue_descriptor.cpp  Ue_descriptor.h  _UE__iMSI__admission_put_request.cpp  _UE__iMSI__admission_put_request.h  _UE__iMSI__anr_put_request.cpp  _UE__iMSI__anr_put_request.h  _UE__iMSI__flow_put_request.cpp  _UE__iMSI__flow_put_request.h  _UE_get_200_response_inner.cpp  _UE_get_200_response_inner.h  _endpoints_get_200_response.cpp  _endpoints_get_200_response_endpoints_inner.cpp  _endpoints_get_200_response_endpoints_inner.h
api_v1/server/src/: api_impl.cpp  api_impl.h  environment_manager.cpp  environment_manager.h
api_v1/server/standalone/: CMakeLists.txt  standalone_server.cpp
api_v1/server/test/: test_observer.cpp
api_v1/ue_client/: CMakeLists.txt  Dockerfile  README.md
api_v1/ue_client/.openapi-generator/: FILES
api_v1/ue_client/comm/: CMakeLists.txt  uectl.cpp
api_v1/ue_client/lib/: lib.cpp  lib.h
api_v1/ue_client/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  Object.cpp  (+1 more)
api_v1/ue_server/: Dockerfile  README.md  requirements.txt  setup.py  tox.ini
openapi/: UE_Manager_api.yml  api_v1.yml  ue_api_v1.yml
simulator/: CMakeLists.txt
simulator/nodeb_api/: CMakeLists.txt
simulator/nodeb_api/.openapi-generator/: FILES
simulator/nodeb_api/include/CppRestOpenAPIClient/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
simulator/nodeb_api/include/CppRestOpenAPIClient/api/: E2NodeManagementApi.h  TestingApi.h  UEManagementApi.h
simulator/nodeb_api/include/CppRestOpenAPIClient/model/: _UE_disconnect_delete_request.h  _UE_handover_post_request.h
simulator/nodeb_api/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
simulator/nodeb_api/src/api/: E2NodeManagementApi.cpp  TestingApi.cpp  UEManagementApi.cpp
simulator/nodeb_api/src/model/: _UE_disconnect_delete_request.cpp  _UE_handover_post_request.cpp
tests/: Dockerfile  test_http_server.py  test_http_server.sh
(+160 files in other folders)
